--- a/buildNumber.properties
+++ b/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Tue Feb 01 10:31:54 GMT 2022
-buildNumber0=360
+#Mon Jul 04 13:32:59 CEST 2022
+buildNumber0=366
